--- a/frontend/src/app/employee-list/employee-list.component.html
+++ b/frontend/src/app/employee-list/employee-list.component.html
@@ -24,6 +24,14 @@
         >
           Delete
         </button>
+
+        <button
+          (click)="employeeDetails(employee.id!)"
+          class="btn btn-info"
+          style="margin-left: 10px"
+        >
+          View
+        </button>
       </td>
     </tr>
   </tbody>
